kube-prometheus-stack-ton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    toolkit.fluxcd.io/tenant: kube-prometheus-stack
  name: kube-prometheus-stack
